--- a/css/styles.css
+++ b/css/styles.css
@@ -597,7 +597,7 @@ img {
   margin-bottom: 8px;
 }
 
-.modal-field:last-child {
+.modal-field:nth-child(4) {
   margin-bottom: 16px;
 }
 
@@ -682,6 +682,9 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check:checked + .modal-check-text span {
